  without further notice.
* BagOStuff::setNewPreparedValues() now emits deprecation warnings.
* The type of the last parameter of BeforeInitializeHook::onBeforeInitialize
  and MediaWikiPerformActionHook::onMediaWikiPerformAction changed from
  MediaWiki to ActionEntryPoint. Relevant methods are still available on
  the object.
* MediaWiki's virtualrest internal library has been removed in favor of the
  HTTP library like: Guzzle, MultiHttpClient or MwHttpRequest.
* Several deprecated methods have been removed from the Content interface,
  in favor of the respective methods in ContentHandlers. Callers should
  use a more narrow interface like ContentRenderer or ContentTransformer
  when possible. The following methods have been removed from Content:
  - getParserOutput()
  - preSaveTransform()
  - preloadTransform()
  - prepareSave()
* ParserOutput::setFlag() and ::getFlag(), deprecated in 1.38, were removed. You
  should use ::setOutputFlag() and ::getOutputFlag() instead.
* PostgresUpdater::addPgEnumValue() unused everywhere, have been removed
  without deprecation. Use of ENUM is highly discouraged.
* ILoadBalancer::getAnyOpenConnection() has been removed without deprecation,
  use ::getConnection() instead.
* LanguageConverter's internal properties, all deprecated in 1.35 or 1.36, have
  now had their deprecated property accessors dropped:
  - mConvRuleTitle
  - mUserVariant
  - mHeaderVariant
  - mMaxDepth
  - mVarSeparatorPattern
  - mLangObj
  - mTablesLoaded
  - mTables
  - mVariants
  - mMainLanguageCode
  - mVariantFallbacks
  - mFlags
  - mVariantNames
  - mDescCodeSep
  - mDescVarSep
* OutputPage::addParserOutputText has been marked @internal since there are no
  known users of it. Its old behavior has been deprecated and will change
  in the future without further notice.
* A some methods of ConnectionManager and SessionConsistentConnectionManager,
  previously deprecated, have been removed:
  - ::releaseConnection(), deprecated in 1.38; do not use