@@ -46,7 +46,7 @@ class FetchText extends Maintenance {
 		);
 	}
 
-	public function finalSetup( SettingsBuilder $settingsBuilder = null ) {
+	public function finalSetup( SettingsBuilder $settingsBuilder ) {
 		// This script should always try to run all db queries in the 'dump' group if such
 		// a group exists, just like the BackupDumper and TextPassDumper modules.
 		// To account for parts of MediaWiki that get their own db connection outside of
