@@ -114,7 +114,7 @@ class MergeMessageFileList extends Maintenance {
 		$this->generateMessageFileList( $setupFiles );
 	}
 
-	public function finalSetup( SettingsBuilder $settingsBuilder = null ) {
+	public function finalSetup( SettingsBuilder $settingsBuilder ) {
 		# This script commonly needs to be run before the l10n cache. But if
 		# LanguageCode is not 'en', it won't be able to run because there is
 		# no l10n cache. Break the cycle by forcing the LanguageCode setting to 'en'.
