@@ -43,7 +43,7 @@ class ParserEditTests extends Maintenance {
 		$this->addOption( 'session-data', 'internal option, do not use', false, true );
 	}
 
-	public function finalSetup( SettingsBuilder $settingsBuilder = null ) {
+	public function finalSetup( SettingsBuilder $settingsBuilder ) {
 		// Some methods which are discouraged for normal code throw exceptions unless
 		// we declare this is just a test.
 		define( 'MW_PARSER_TEST', true );
